--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <type>pom</type>
             <scope>provided</scope>
         </dependency>
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.20</version>
+    <scope>provided</scope>
+</dependency>
+
         <dependency>
     <groupId>org.primefaces</groupId>
     <artifactId>primefaces</artifactId>
